<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="4Ds-0Y-P7T">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Root View Controller-->
        <scene sceneID="6OS-IA-mYn">
            <objects>
                <viewController id="4Ds-0Y-P7T" customClass="RootViewController" customModule="Testing_in_Xcode" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="2cd-ce-88o">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="Do7-KB-F3k" userLabel="EandP">
                                <rect key="frame" x="20.5" y="220" width="373" height="91"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Mi1-qb-J1D">
                                        <rect key="frame" x="0.0" y="0.0" width="373" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                        <connections>
                                            <action selector="textFieldChanged:" destination="4Ds-0Y-P7T" eventType="editingChanged" id="RlR-72-vyP"/>
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7Ke-q7-6br">
                                        <rect key="frame" x="0.0" y="57" width="373" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                        <connections>
                                            <action selector="textFieldChanged:" destination="4Ds-0Y-P7T" eventType="editingChanged" id="VU3-2y-iHv"/>
                                        </connections>
                                    </textField>
                                </subviews>
                            </stackView>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="kvA-7s-O9u" userLabel="Bottom">
                                <rect key="frame" x="137" y="334" width="257" height="141"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Year of birth" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="P3L-7F-3Wo">
                                        <rect key="frame" x="149" y="0.0" width="108" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                        <connections>
                                            <action selector="textFieldChanged:" destination="4Ds-0Y-P7T" eventType="editingChanged" id="RuW-hz-I4E"/>
                                        </connections>
                                    </textField>
                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="41" translatesAutoresizingMaskIntoConstraints="NO" id="pIf-qD-xJZ">
                                        <rect key="frame" x="0.0" y="57" width="257" height="31"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Terms and Conditions" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CG2-xi-9Tg">
                                                <rect key="frame" x="0.0" y="0.0" width="167" height="31"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="XuZ-aY-Bcz">
                                                <rect key="frame" x="208" y="0.0" width="51" height="31"/>
                                                <accessibility key="accessibilityConfiguration" label="switchLabel"/>
                                                <connections>
                                                    <action selector="switchPressed:" destination="4Ds-0Y-P7T" eventType="valueChanged" id="QN9-Kl-t1K"/>
                                                </connections>
                                            </switch>
                                        </subviews>
                                    </stackView>
                                    <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vth-cq-Yuk">
                                        <rect key="frame" x="200" y="111" width="57" height="30"/>
                                        <state key="normal" title="Register"/>
                                        <connections>
                                            <action selector="registerPressed:" destination="4Ds-0Y-P7T" eventType="touchUpInside" id="VLP-vM-xPJ"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kd8-GJ-A66">
                                <rect key="frame" x="207" y="525" width="0.0" height="0.0"/>
                                <accessibility key="accessibilityConfiguration" identifier="errorLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
                            <constraint firstItem="kd8-GJ-A66" firstAttribute="top" secondItem="kvA-7s-O9u" secondAttribute="bottom" constant="50" id="4DT-NI-7yb"/>
                            <constraint firstItem="Do7-KB-F3k" firstAttribute="width" secondItem="2cd-ce-88o" secondAttribute="width" multiplier="0.9" id="CIg-YV-AvQ"/>
                            <constraint firstItem="kd8-GJ-A66" firstAttribute="centerX" secondItem="2cd-ce-88o" secondAttribute="centerX" id="KTR-xx-Uum"/>
                            <constraint firstItem="Do7-KB-F3k" firstAttribute="top" secondItem="hs1-xg-Joy" secondAttribute="top" multiplier="5" id="SfR-GI-EtD"/>
                            <constraint firstItem="kvA-7s-O9u" firstAttribute="top" secondItem="Do7-KB-F3k" secondAttribute="bottom" constant="23" id="Xbu-Nl-9Kc"/>
                            <constraint firstItem="Do7-KB-F3k" firstAttribute="centerX" secondItem="2cd-ce-88o" secondAttribute="centerX" id="bTF-Sp-D5U"/>
                            <constraint firstItem="hs1-xg-Joy" firstAttribute="trailing" secondItem="kvA-7s-O9u" secondAttribute="trailing" constant="20" id="otL-PF-SfS"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="hs1-xg-Joy"/>
                    </view>
                    <connections>
                        <outlet property="emailTextField" destination="Mi1-qb-J1D" id="eyz-je-lQC"/>
                        <outlet property="errorLabel" destination="kd8-GJ-A66" id="NpC-3i-MfF"/>
                        <outlet property="passwordTextField" destination="7Ke-q7-6br" id="mPl-gJ-pkT"/>
                        <outlet property="registerButton" destination="vth-cq-Yuk" id="BWq-Im-M16"/>
                        <outlet property="switchButton" destination="XuZ-aY-Bcz" id="x1l-lR-bf7"/>
                        <outlet property="yearTextField" destination="P3L-7F-3Wo" id="cRi-Ch-z8Y"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Vpc-st-9Tf" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="188" y="-35"/>
        </scene>
    </scenes>
</document>
